--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -67,13 +67,15 @@
             android:id="@+id/signUp_name"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Enter your Name" />
+            android:hint="Enter your Name"
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/signUp_email"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:hint="Enter your Email ID" />
+            android:hint="Enter your Email ID"
+            android:inputType="textEmailAddress" />
 
         <Spinner android:id="@+id/sp1"
             android:layout_width="match_parent"
